# ARWA-Agent

./: .env.example  .gitignore  AGENTS.md  LICENSE  MIGRATION_NOTES.md  README.md  SETUP_WINDOWS.md  restart-all.bat  start-4-windows.bat  start-4-windows.ps1  start-all.bat  start-services.ps1  stop-all.bat
.github/workflows/: ci.yml
agent/: README.md  jest.config.js  package-lock.json  package.json  rpc-schema.json  tsconfig.json  tsconfig.test.json
agent/scripts/: debug-build-swap.ts  debug-lp-tx.ts  debug-tx-size.ts  demo-bootstrap-vault.ts  demo-cycle.ts  deploy-cep18.ts  deploy.ts  list-mcp-tools.ts  patch-cspr-trade-sdk.js  quickstart.ts  record-deployment.ts  serve-frontend.js  setup.ts  simulate-parking-revenue.ts  stakeholder-deposit-simulator.ts  start-x402-server.ps1  swap-tx.json  test-add-lp-200.ts  test-add-lp-blake2b-sign.ts  test-add-lp-file-workflow.ts  test-add-lp-fromjson.ts  test-add-lp-manual-sign.ts  test-add-lp-onchain.ts  test-add-lp-raw.ts  test-add-lp-sdk-hash.ts  test-add-lp-sdk-sign.ts  test-add-lp-submit-final.ts  test-add-lp-tx-format.ts  test-add-lp-tx-payload.ts  test-add-lp.ts  test-add-remove-lp.ts  test-circuit-breaker.ts  test-contract-info.ts  (+45 more)
contracts/odra/: Cargo.toml  Odra.toml  README.md
contracts/odra/agent_vault/: Cargo.toml
contracts/odra/agent_vault/src/: agent_vault.rs
contracts/odra/agent_vault/wasm/: AgentVault.wasm
contracts/odra/revenue_emitter/: Cargo.toml
contracts/odra/revenue_emitter/src/: lib.rs  revenue_emitter.rs
contracts/odra/stakeholder_deposit/: Cargo.toml
contracts/odra/stakeholder_deposit/src/: lib.rs  stakeholder_deposit.rs
contracts/odra/stakeholder_deposit/wasm/: StakeholderDeposit.wasm
contracts/odra/wasm/: AgentVault.wasm  RevenueEmitter.wasm
frontend/: index.html
(+38 files in other folders)
