[workspace]
members = ["revenue_emitter", "agent_vault"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ParkFlow Agent Team"]
license = "Apache-2.0"

[workspace.dependencies]
odra = "2.7"
odra-test = "2.7"
odra-build = "2.7"
odra-schema = "2.7"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = "symbols"

[profile.dev.package."*"]
opt-level = 3
